--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
 <h3><a href="javascript:history.back()">Go back to where you came from</a></h3>
 <h3><a href="https://status.mechapower.eu">Visit the MP status page</a></h3>
 <h3><a href="https://the.benjifox.gay">Visit the main page</a></h3>
+<h2>If you're trying to snoop - DON'T</h2>
 </body>
 </html>
