--- a/index.html
+++ b/index.html
@@ -1,11 +1,24 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Welcome to the TUHost Repository</title>
+</head>
 <body>
-<h1>This is a GH Repo</h1>
-<h2>No website lies here!</h2>
-<h3><a href="javascript:history.back()">Go back to where you came from</a></h3>
-<h3><a href="https://status.mechapower.eu">Visit the MP status page</a></h3>
-<h3><a href="https://the.benjifox.gay">Visit the main page</a></h3>
-<h2>If you're trying to snoop - DON'T</h2>
+    <h1>Welcome to the TUHost Repository</h1>
+    <p>This page hosts files used for loading images, strings, and custom media into my Tower Unite condos. If you're seeing this in Tower Unite, it means something went wrong or you typed the URL incorrectly.</p>
+    
+    <h2>What is Tower Unite?</h2>
+    <p><em>Tower Unite</em> is a multiplayer virtual world that allows you to load custom media, websites, and images into your condo. This repository provides the necessary files to customize your experience within Tower Unite.</p>
+
+    <h2>Repository Purpose</h2>
+    <p>This repository houses public files specifically for imageloading and stringloading in my Tower Unite condos. It is not open for external contributions such as issues, pull requests, or discussions.</p>
+
+    <h3><a href="javascript:history.back()">Go back to where you came from</a></h3>
+    <h3><a href="https://status.mechapower.eu">Visit the MP status page</a></h3>
+    <h3><a href="https://the.benjifox.gay">Visit the main page</a></h3>
+
+    <h2>If you're trying to snoop - DON'T</h2>
 </body>
 </html>
