--- a/index.html
+++ b/index.html
@@ -7,13 +7,16 @@
 </head>
 <body>
     <h1>Welcome to the TUHost Repository</h1>
-    <p>This page hosts files used for loading images, strings, and custom media into my Tower Unite condos. If you're seeing this in Tower Unite, it means something went wrong or you typed the URL incorrectly.</p>
+    <p>This page hosts files used for loading images, custom webpages, and media into my Tower Unite condos. If you're seeing this in Tower Unite, it means something went wrong or you typed the URL incorrectly.</p>
     
     <h2>What is Tower Unite?</h2>
-    <p><em>Tower Unite</em> is a multiplayer virtual world that allows you to load custom media, websites, and images into your condo. This repository provides the necessary files to customize your experience within Tower Unite.</p>
+    <p><em>Tower Unite</em> is a multiplayer virtual world that allows you to load custom media, websites, and images into your condo using a built-in Chromium browser. This repository is a Tower Unite fork of my original VRChat host, adapted for the features available in Tower Unite. While it allows loading images and custom media, string loading is not supported in Tower Unite like it is in VRChat.</p>
 
     <h2>Repository Purpose</h2>
-    <p>This repository houses public files specifically for imageloading and stringloading in my Tower Unite condos. It is not open for external contributions such as issues, pull requests, or discussions.</p>
+    <p>This repository houses public files specifically for loading images, custom webpages, and media into my Tower Unite condos. It is not open for external contributions such as issues, pull requests, or discussions.</p>
+
+    <h2>Important Note</h2>
+    <p>Since Tower Unite uses Chromium for displaying custom content, the page is loaded without any interactivity options. You cannot interact with the page (click buttons, etc.) — it is simply rendered as-is within your condo.</p>
 
     <h3><a href="javascript:history.back()">Go back to where you came from</a></h3>
     <h3><a href="https://status.mechapower.eu">Visit the MP status page</a></h3>
