--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 </p>
                 <div class="bg-gray-700 p-4 rounded inline-block">
                     <p class="text-sm font-mono">Example media URL format:</p>
-                    <p class="text-sm font-mono text-purple-300">https://BenjiThatFoxGuy.GitHub.io/tuhost/path/to/file.png</p>
+                    <p class="text-sm font-mono text-purple-300">https://benjithatfoxguy.github.io/tuhost/path/to/file.png</p>
                 </div>
             </section>
         </main>
