--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         <div class="bg-gray-800 p-4 rounded-lg shadow-xl border border-purple-500 max-w-xs">
             <p class="text-sm mb-2">The Catsacks are staring at you...</p>
             <!-- Replace this with your actual Catsack PNG -->
-            <img src="https://static.wikia.nocookie.net/tower-unite/images/9/92/Catsack.png/revision/latest?cb=20180723183559" alt="Catsack" class="w-24 h-24 mx-auto floating" id="catsackImage">
+            <img src="https://benjithatfoxguy.github.io/tuhost/images/Catsack.webp" alt="Catsack" class="w-24 h-24 mx-auto floating" id="catsackImage">
             <p class="text-xs mt-2 text-gray-400">You weren't supposed to see this...</p>
         </div>
     </div>
